2018-08-06  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to composer.json

2017-10-26  Ruben Schmidmeister <ruben.schmidmeister@icloud.com>
    * Add missing names for de_CH, de_AT, en_US and en_GB

2017-08-07  Franz Holzinger  <franz@ttproducts.de>
    * fix forge issue 72802: Ålandinseln instead of Alandinseln

2017-05-17  Franz Holzinger  <franz@ttproducts.de>
    * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * modifications of composer.json

2017-04-06  Franz Holzinger  <franz@ttproducts.de>
    * bugfix and improvement to composer.json

2017-03-11  Franz Holzinger  <franz@ttproducts.de>
    * ready for TYPO3 8.x

2015-10-13 Daniel Minder <typo3@minder.de>
	* Compatibility update for static_info_table 6.3.1

2014-12-09 Daniel Minder <typo3@minder.de>
	* Compatibility update for static_info_tables 6.2.0
	* Requires TYPO3 6.2

2014-10-09 Daniel Minder <typo3@minder.de>
	* Territory 'Lateinamerika und Karibik' added
	* Include all translations in searchFields

2014-09-16 Daniel Minder <typo3@minder.de>
	* Name for 'Turkish Lira' corrected
	* Documentation added

2014-05-29 Daniel Minder <typo3@minder.de>
	* Version requirement for static_info_tables updated

2014-02-17 Daniel Minder <typo3@minder.de>
        * Removed deprecated parameter from addTCAcolumns call

2014-01-27 Daniel Minder <typo3@minder.de>
	* Moved to TYPO3 6.x based on static_info_tables templates
	* Upgrade to changes of static_info_tables 6.0.7

2014-01-25  Daniel Minder <typo3@minder.de>
        * Upgrade to changes of static_info_tables 2.3.2
        * Added several missing entries in Italy
        * Translation of language "chinese", fixing bug #51053

2013-03-14  Franz Holzinger  <franz@ttproducts.de>
	* add a manual with the description where the UPDATE! function can be found

2013-03-01  Daniel Minder <typo3@minder.de>
	* Upgrade to changes of static_info_tables 2.3.0: